--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <h2>Cashier Operation</h2>
+		<ul>
+			<li><a href="./cashierOperation/checkout.html">Checkout</a></li>
+			<li><a href="./cashierOperation/voidRefund.html">Void/Refund</a></li>
+			<li><a href="./cashierOperation/viewMySaleTransactions.html">View My Sale Transactions</a></li>
+		</ul>
     <h2>System Administration</h2>
 		<ul>
 			<li><a href="./systemAdministration/createNewStaff.html">Create New Staff</a></li>
